--- a/src/pages/AllBeers/AllBeers.css
+++ b/src/pages/AllBeers/AllBeers.css
@@ -2,13 +2,13 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  height: 40vh;
   margin: 3vw 10vw;
   border-bottom: 2px solid gray;
+  padding: 3vw;
 }
 .allbeers article img {
   width: 25%;
-  height: 75%;
+  object-fit: cover;
 }
 .allbeers-text {
   width: 60%;
@@ -43,11 +43,10 @@
 
 @media only screen and (min-width: 568px) {
   .allbeers article {
-    height: 80vh;
     padding: 5vw 0;
   }
   .allbeers article img {
     width: 15%;
-    height: 100%;
+    object-fit: cover;
   }
 }
